external-crates/move/crates/move-compiler/tests/move_2024/typing/inferred_literal_incompatible.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W04039]: unable to determine princiapl type for literal
  ┌─ tests/move_2024/typing/inferred_literal_incompatible.move:2:27
  │
2 │     fun test() { let _x = "hi"; _x = 10; }
  │                           ^^^^ Could not determine a concrete type for this string literal, so defaulting to 'vector<u8>'
  │
  = To avoid this warning, add an explicit annotation, e.g., 'b"<const>"'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04033]: types are not equal
  ┌─ tests/move_2024/typing/inferred_literal_incompatible.move:2:33
  │
2 │     fun test() { let _x = "hi"; _x = 10; }
  │                           ----  ^^   -- Given a num literal
  │                           │     │     
  │                           │     Invalid assignment to variable '_x'
  │                           Expected a string literal
  │
  = Inferred value types must be compatible

warning[W04039]: unable to determine princiapl type for literal
  ┌─ tests/move_2024/typing/inferred_literal_incompatible.move:2:38
  │
2 │     fun test() { let _x = "hi"; _x = 10; }
  │                                      ^^ Could not determine a concrete type for this numeric literal, so defaulting to 'u64'
  │
  = To avoid this warning, add an explicit type annotation, e.g., '<num>u64'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
